[package]
name = "rusk"
edition = "2021"
version = "0.1.0"

[dependencies]
env_logger = "0.10.0"
ignore = "0.4.20"
log = "0.4.20"
serde_with = "3.3.0"
thiserror = "1.0.48"
toml = "0.8.0"
deno = { git = "https://github.com/gw31415/deno", branch="main" }
deno_media_type = "0.1.1"

[dependencies.serde]
version = "1.0.188"
features = ["std", "serde_derive"]
default-features = false

[dependencies.strum]
version = "0.25.0"
features = ["derive"]

[profile.release]
lto = true
panic = "abort"
strip = true

[profile.release.package]
