[package]
name = "rusk"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_task_shell = "0.20.3"
tokio = { version = "1.42.0", features = ["full"] }
anyhow = "1.0.95"
thiserror = "2.0.9"
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
ignore = "0.4.23"
toml = "0.8.19"
